Project1/force-app/main/default/objects/Address__c/fields/address_1__c.field-meta.xml
<CustomField>
    <fullName>address_1__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Main address</inlineHelpText>
    <label>Address 1</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>