Project1/force-app/main/default/objects/Address__c/fields/address_2__c.field-meta.xml
<CustomField>
    <fullName>address_2__c</fullName>
    <inlineHelpText>(opt. Apartment or Suite Number)</inlineHelpText>
    <label>Address 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>