Project1/force-app/main/default/objects/Address__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>City</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>