Project1/force-app/main/default/objects/Address__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>address_1__c &amp; &quot; &quot; &amp; address_2__c &amp; &quot;, &quot; &amp;  city__c &amp; &quot;, &quot; &amp;  TEXT( state__c )&amp; &quot; &quot; &amp;  zip_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>