Project1/force-app/main/default/objects/Address__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>