Project1/force-app/main/default/objects/Address__c/fields/zip_code__c.field-meta.xml
<CustomField>
    <fullName>zip_code__c</fullName>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>